--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         function setup() {
             createCanvas(windowWidth, windowHeight).position(0, 0).style('z-index', -1);
-            angola = casos.angola;
+            angola = casos.Angola;
             console.log(angola);
             confirmados = angola[angola.length - 1].confirmed;
             muertos = angola[angola.length - 1].deaths;
