--- a/graph.html
+++ b/graph.html
@@ -42,11 +42,11 @@
 
     <script>
         var url = "https://pomber.github.io/covid19/timeseries.json";
-        var casos, italia, austria, eslovenia, francia, suiza;
+        var casos, bolivia, china, eslovenia, francia, suiza;
         var marzo = [];
-        var marzo_italia = [];
-        var marzo_austria = [];
-        var marzo_eslovenia = [];
+        var marzo_bolivia = [];
+        var marzo_china = [];
+        var marzo_angola = [];
         var marzo_francia = [];
         var marzo_suiza = [];
 
