--- a/graph.html
+++ b/graph.html
@@ -126,7 +126,7 @@
                         lineTension: 0,
                         data: marzo_francia
                     }, {
-                        label: 'Italia',
+                        label: 'Bolivia',
                         backgroundColor: 'rgba(228,26,28,.1)',
                         borderColor: 'rgb(228,26,28)',
                         borderWidth: 2,
