--- a/graph.html
+++ b/graph.html
@@ -98,7 +98,7 @@
             }
 
             new Chart(document.getElementById('chart').getContext('2d'), {
-                type: 'line',
+                type: 'bar',
                 data: {
                     labels: marzo,
                     datasets: [{
