--- a/graph.html
+++ b/graph.html
@@ -103,7 +103,7 @@
                     labels: marzo,
                     datasets: [{
                         label: 'China',
-                        backgroundColor: 'rgba(29,233,182,.1)',
+                        backgroundColor: 'rgb(29,233,182)',
                         borderColor: 'rgb(29,233,182)',
                         borderWidth: 2,
                         pointRadius: 2,
@@ -111,7 +111,7 @@
                         data: marzo_china
                     }, {
                         label: 'Eslovenia',
-                        backgroundColor: 'rgba(100,255,218,.1)',
+                        backgroundColor: 'rgb(100,255,218)',
                         borderColor: 'rgb(100,255,218)',
                         borderWidth: 2,
                         pointRadius: 2,
@@ -119,7 +119,7 @@
                         data: marzo_eslovenia
                     }, {
                         label: 'Francia',
-                        backgroundColor: 'rgba(0,191,165,.1)',
+                        backgroundColor: 'rgb(0,191,165)',
                         borderColor: 'rgb(0,191,165)',
                         borderWidth: 2,
                         pointRadius: 2,
@@ -127,7 +127,7 @@
                         data: marzo_francia
                     }, {
                         label: 'Bolivia',
-                        backgroundColor: 'rgba(0,230,118,.1)',
+                        backgroundColor: 'rgb(0,230,118)',
                         borderColor: 'rgb(0,230,118)',
                         borderWidth: 2,
                         pointRadius: 2,
@@ -135,7 +135,7 @@
                         data: marzo_bolivia
                     }, {
                         label: 'Suiza',
-                        backgroundColor: 'rgba(0,229,255,.1)',
+                        backgroundColor: 'rgb(0,229,255)',
                         borderColor: 'rgb(0,229,255)',
                         borderWidth: 2,
                         pointRadius: 2,
